<resources>
    <string name="app_name">reverser</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Reverser</string>
    <string name="nav_header_subtitle">Break Everything</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_license">License</string>
    <string name="action_exit">Exit</string>

    <string name="menu_lesson">Lesson</string>
    <string name="menu_challenge1">Challenge 1</string>
    <string name="menu_challenge2">Challenge 2</string>
    <string name="menu_challenge3">Challenge 3</string>
    <string name="menu_animations">Animations</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_signing">App signing</string>
    <string name="menu_reversing">Reverse Engineering</string>
    <string name="menu_further_reading">Further Reading</string>

    signingInfo

    <!-- Preferences -->
    <string name="dialog_based_preferences">Server Preferences</string>

    <string name="intro">This is a vulnerable App made to be used with the
		OWASP Security Shepherd Project. You will need to configure the server
		address in the settings to match the address of the Security Shepherd
		instance you have access to. This can be either a URL or an IP. For
		more information, please visit
		https://www.owasp.org/index.php/OWASP_Security_Shepherd </string>

    <string name="server_title">Server Address</string>
    <string name="server_summary">Enter Server address here</string>
    <string name="server_dialog_title">Enter Server Address</string>

    <string name="license_title">License</string>
    <string name="summary_license">This App is part of the Security Shepherd Project.
		The Security Shepherd project is free software: you can redistribute
		it and/or modify it under the terms of the GNU General Public License
		as published by the Free Software Foundation, either version 3 of the
		License, or (at your option) any later version. The Security Shepherd
		project is distributed in the hope that it will be useful, but WITHOUT
		ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
		FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
		for more details. You should have received a copy of the GNU General
		Public License along with the Security Shepherd project. If not, see
		http://www.gnu.org/licenses.</string>
    <string name="title_test_preference">Test Server Connection</string>
    <string name="summary_test_preference">Tests the specified Server connection</string>

    <!-- System Values -->
    <string name="hard_soft_info">Hardware / Software Information</string>
    <string name="keyLabel">Challenge Key</string>
    <string name="device_info">Device Information</string>
    <string name="serial">SERIAL: </string>
    <string name="model">MODEL: </string>
    <string name="id">ID: </string>
    <string name="build">BUILD: </string>
    <string name="manufacturer">MANUFACTURER: </string>
    <string name="brand">BRAND: </string>
    <string name="type">TYPE: </string>
    <string name="user">USER: </string>
    <string name="base">BASE: </string>
    <string name="incremental">INCREMENTAL: </string>
    <string name="sdk">SDK: </string>
    <string name="board">BOARD: </string>
    <string name="host">HOST: </string>
    <string name="release">RELEASE: </string>
    <string name="fingerprint">FINGERPRINT: </string>
    <string name="versioncode">VERSION CODE: </string>

    <!-- Lesson -->
    <!-- TODO: This is the lesson key / flag. find some secure way to back up this value (╯°□°)╯︵ ┻━┻ -->
    <string name="lessonKey">DrumaDrumaDrumBoomBoom</string>
    <string name="challenge_key">/?????????????????</string>

    <!-- Challenge 1 -->
    <string name="info">Documentation</string>

    <!-- Challenge 2 -->
    <string name="something">Documentation</string>


</resources>