<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Lesson">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_lesson"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_lesson" />
            </group>
        </menu>
    </item>

    <item android:title="Challenges">
    <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_challenge_1"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_challenge1" />
            <item
                android:id="@+id/nav_challenge_2"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_challenge2" />
            <item
                android:id="@+id/nav_challenge_3"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_challenge3" />
        </group>
    </menu>
    </item>

    <item android:title="Information">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/signingInfo"
                    android:icon="@drawable/ic_menu_signing"
                    android:title="@string/menu_signing" />
                <item
                    android:id="@+id/reversingInfo"
                    android:icon="@drawable/ic_menu_reversing"
                    android:title="@string/menu_reversing" />
                <item
                    android:id="@+id/nav_furtherReading"
                    android:icon="@drawable/ic_menu_further_reading"
                    android:title="@string/menu_further_reading" />
            </group>
        </menu>
    </item>
</menu>